...
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_login_title"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_correu_usuari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correu_usuari"
            android:maxLines="1"
            android:inputType="text" />

...
        android:layout_height="wrap_content"
        android:layout_below="@id/tl_correu_usuari"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_contrasenya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasenya"
            android:inputType="textPassword"
            android:maxLines="1" />

...
        android:layout_below="@id/tl_contrasenya"
        android:layout_alignStart="@id/tl_correu_usuari"
        android:layout_alignEnd="@id/tl_contrasenya"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sessio"
        android:layout_below="@id/check_mostrar_contrasenya"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"/>
...
