...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Botó d'accés al panell esquerre -->
            <ImageButton
                android:id="@+id/boto_acces_panell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
...
                    android:id="@+id/tl_nom_usuari"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_nom_usuari"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Nom de l'Usuari"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="16sp" />

...
