<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_menu"
        android:title="Menú d'usuari"/>
    <item
        android:id="@+id/nav_perfil_usuari"
        android:title="Perfil d'usuari" />
    <item
        android:id="@+id/nav_usuaris"
        android:title="Gestió d'Usuaris" />
    <item
        android:id="@+id/nav_activitats"
...
