<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <!-- Contenidor del botó de tancar -->
    <LinearLayout
        android:id="@+id/botoTancarContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp">

        <ImageButton
            android:id="@+id/botoTancar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_tancar" />
    </LinearLayout>

    <!-- Nom de la instal·lació -->
    <TextView
        android:id="@+id/tvNomInstallacioEtiqueta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nom: "
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@id/botoTancarContainer"/>

    <TextView
        android:id="@+id/tvNomInstallacio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNomInstallacioEtiqueta"
        android:textSize="16sp"
        android:layout_marginStart="16dp"/>

    <!-- Descripció de la instal·lació -->
    <TextView
        android:id="@+id/tvDescripcioInstallacioEtiqueta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNomInstallacio"
        android:layout_marginTop="16dp"
        android:text="Descripció: "
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvDescripcioInstallacio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDescripcioInstallacioEtiqueta"
        android:textSize="16sp"
        android:layout_marginStart="16dp"/>

    <!-- Tipus de la instal·lació -->
    <TextView
        android:id="@+id/tvTipusInstallacioEtiqueta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDescripcioInstallacio"
        android:layout_marginTop="16dp"
        android:text="Tipus: "
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvTipusInstallacio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTipusInstallacioEtiqueta"
        android:textSize="16sp"
        android:layout_marginStart="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTipusInstallacio"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/btnModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Modificar instal·lació"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Eliminar instal·lació"/>
    </LinearLayout>

</RelativeLayout>
