...
            android:textSize="22sp"
            android:textStyle="bold"
            android:padding="20dp"
            android:text="Activitats disponibles al centre:" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvActivitats"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnCrearNovaActivitat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Crear nova activitat"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />

...
