...
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"/>

        <Button
            android:id="@+id/boto_gestio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="Gestió d'activitats"
            android:background="@drawable/boto_personalitzat"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"/>

        <Button
            android:id="@+id/boto_gestio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="Gestió d'instal·lacions"
            android:background="@drawable/boto_personalitzat"
            android:paddingStart="20dp"
...
