...
            android:textStyle="bold"
            android:padding="20dp"
            android:text="Instal·lacions disponibles al centre:" />

        <!-- Vista de recyclerview per a les instal·lacions -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvInstallacions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp" />

        <!-- Botó per crear una nova instal·lació -->
        <Button
            android:id="@+id/btnCrearNovaInstallacio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Crear nova instal·lació"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />

...
